@@ -5,7 +5,8 @@ Changelog
 ----------------------
 * Upgrade step:
   ZMI > portal_setup > profile "EEA Daviz" > import Action Providers settings
-* Feature: Added new action on data visualization "Create another visualization"
+* Feature: Added new action on data visualization "Create another visualization";
+  Added action on Sparql "Create visualization with this dataset"
   [szabozo0 refs #5347]
 * Feature: use title of data source as default title for visualisation
   [szabozo0 refs #5138]
